--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,1 +1,26 @@
+{% extends 'base.html' %}
+{% block title %}Dashboard{% endblock %}
+{% block content %}
+<h1>Dashboard</h1>
+<div class="row">
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-header">Total Cases</div>
+            <div class="card-body">{{ total_cases }}</div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-header">Total Evidence Items</div>
+            <div class="card-body">{{ total_evidence_items }}</div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-header">Total Users</div>
+            <div class="card-body">{{ total_users }}</div>
+        </div>
+    </div>
+</div>
+{% endblock %}
 
