--- a/app/templates/case_detail.html
+++ b/app/templates/case_detail.html
@@ -77,7 +77,7 @@
             {% for exhibit in exhibits %}
             <tr>
                 <td>{{ exhibit.exhibit_ref_number }}</td>
-                <td>{{ exhibit.device_type }}</td>
+                <td><img src="{{ url_for('static', filename='device_icons/' + exhibit.device_type) }}" alt="{{ exhibit.device_type }}" width="32" height="32"></td>
                 <td>{{ exhibit.device_manuf }}</td>
                 <td>
                     <a href="#" class="btn btn-sm btn-primary">View</a>
